# codingForDummies

./: .gitignore  LICENSE.md  README.md
JiraFD/: README.md
UML/: README.md
VMFD/: README.md
VSCodeFD/: README.md  c_cpp_properties.json  global.code-snippets  settings.json  vscode.md
awkFD/: README.md  awkFD.awk  run.sh
bashFD/: CLI_hotkeys.md  README.md  bashFD.bash  gitFD.bash  lessFD.bash  selfDefineFunc  selfDefineFunc.sh  shellScriptingFD.bash  vimFD.bash
cmakeFD/: CMakeLists.txt  README.md  ROS1CMAKE.md  ROS2CMAKE.md  cmakeForDummiesConfig.h.in
cmakeFD/CMakeEmptyTest/: duck.cpp
cmakeFD/CMakeScriptTest/: test.txt
cmakeFD/CMakeTest/: CMakeLists.txt  duck.cpp  run.sh
cmakeFD/CMakeTest/Adder/: adder.cpp
cmakeFD/MakefileTest/: Makefile  duck.cpp
cppFD/: README.md  TypeDefs.hpp  classExample.hpp  classSyntax.hpp  cppFD.cpp  explicitSpecifier.cpp  header.hpp  implicitConversion.cpp  smartPointer.cpp  specifierExplicit.cpp  specifierImplicit.cpp  struct.cpp  structSyntax.hpp  test_helper_functions.cpp
dockerFD/: README.md  dockerFD.bash
gitFD/: README.md  gitFD.bash
latexFD/: bibliography.bib  latexFD.tex  sample.tex  texstudio.md  user-defined-package.sty
licenseFD/: 3rd-party-licenses.txt  README.md  licenseFD.md
luaFD/: luaFD.lua
pyFD/: README.md  _init_paths.py  class_features.py  create_vid.py  pyFD.py  pytorchFD.py  tensorflowFD.py  test_something.py  venvFD.sh
ros2FD/: README.md
rosFD/: README.md  msg.md  rosFD.bash  srv.md
tmuxFD/: README.md
vimFD/: README.md  lessFD.bash  vimFD.vim
youtubeFD/: README.md
(+28 files in other folders)
